Implement maximum minting count task

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # This is where you add your environment variables
-MNEMONIC='cat dog frog....'
-RINKEBY_RPC_URL='www.infura.io/asdfadsfafdadf'
+MNEMONIC=''
+RINKEBY_RPC_URL='wss://rinkeby.infura.io/ws/v3/dbabe712dfb9430db8f2244493de4122'
+ETHERSCAN_API_KEY='NJFXGXWRER21QM7ZF7YGZ4I23EVC8KS9K8'
