--- a/UploadToIPFS/package.json
+++ b/UploadToIPFS/package.json
@@ -13,6 +13,7 @@
         "@pinata/sdk": "^1.1.23",
         "axios": "^0.21.4",
         "dotenv": "^5.0.0",
+        "fast-csv": "^4.3.6",
         "form-data": "^4.0.0"
     }
 }
