--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@usedapp/core": "^0.4.1",
+    "dotenv": "^10.0.0",
     "ethers": "^5.2.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
   },
