Extract ip address to .env file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "connect-metamask-react-dapp",
+  "homepage": "blootelves.family",
   "version": "0.1.0",
   "author": "Jacob E. Dawson",
   "private": true,
