--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.21.4",
         "cors": "^2.8.5",
         "dotenv": "^5.0.0",
+        "express": "^4.17.1",
         "fast-csv": "^4.3.6",
         "form-data": "^4.0.0"
     }
